<resources>
    <string name="app_name">NUMAD21S-DanPeluso</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="about">About</string>
    <string name="email_and_name">Dan Peluso - peluso.d@husky.neu.edu</string>
    <string name="hello_first_fragment">Hello World!</string>
    <!-- A2-->
    <string name="clicky_clack">Clicky Clack</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="last_pressed_label">Pressed: %1$s</string>
    <!--A3-->
    <string name="link_collector">Link Collector</string>
    <string name="link_collector_input_label">Please enter name and valid URL</string>
    <string name="link_collector_name_hint">Name</string>
    <string name="link_collector_url_hint">URL</string>
    <string name="ok">OK</string>
    <!--A4-->
    <string name="display_location">Display Location</string>
    <!--A5-->
    <string name="web_service">Web Service</string>
    <string name="how_many_cats">How many cat facts would you like to receive?</string>
    <string name="send">Get facts</string>
</resources>